<resources>
    <string name="app_name_rus">Мой\nАквариум</string>
    <string name="app_name">Мой Аквариум</string>
    <string name="logo">Logo</string>
    <string name="tips_text">Статьи</string>
    <string name="calendar_text">Календарь</string>
    <string name="service_text">Сервисы</string>
    <string name="forum_text">Форум</string>
    <string name="profile_text">Профиль</string>
    <string name="settings_text">Настройки профиля</string>

    <string name="sign_text">Войдите в свою учетную запись</string>
    <string name="registration_text">Регистрация</string>
    <string name="sign_in_text">Вход</string>

    <string name="logo_text">Мой аквариум</string>
    <string name="title_activity_calendar">Calendar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--    for service-->
    <!--    calculators-->
    <string name="service_menu_calculators">Калькуляторы</string>
    <string name="service_menu_compatibility">Совместимость</string>
    <string name="service_menu_calendar">Календарь</string>
    <string name="service_calculator_volume">Калькулятор объема аквариума</string>
    <string name="service_calculator_priming">Калькулятор объема грунта</string>
    <string name="service_volume_fish">Выберите рыбок, которые живут в вашем аквариуме:</string>
    <string name="service_calculator_search">Поиск</string>
    <string name="service_use_my_fish">Расчитать для рыбок, указанных в профиле</string>
    <string name="service_calculate">Рассчитать объем аквариума</string>
    <string name="service_rec_vol">Необходимый объем аквариума:</string>
    <string name="service_rec_prim_length">Длина аквариума (в см.):</string>
    <string name="service_rec_prim_width">Ширина аквариума  (в см.):</string>
    <string name="service_rec_prim_height">Высота аквариума (в см.):</string>
    <string name="service_rec_prim_thickness"> Желаемый слой грунта (в см.):</string>
    <string name="service_calculate2">Рассичтать объем грунта</string>
    <string name="service_rec_prim">Необходимое количество грунта:</string>
    <string name="service_question">?</string>
    <string name="service_msg_fish">Аквариумных рыбок - великое множество. И далеко не все рыбки совместимы между собой, даже если на глаз они кажутся мирными. Под совместимостью мы понимаем не только отсутствие взаимной агресси у разных видов, но и близкие параметры воды, обустройства, рациона питания и прочих условий содержания.</string>
    <string name="service_title_fish">Расчет осовместимости рыбок</string>
    <string name="service_msg_priming">Перед покупкой грунта в аквариум необходимо определить его количество, чтобы не остался лишний или наоборот, не хватило. Калькулятор поможет вам в этом! Просто введите указанные данные!</string>
    <string name="service_title_priming">Расчет объема аквариума</string>
    <string name="service_title_volume">Расчет объема аквариума</string>
    <string name="service_msg_volume">При создании своего собственного водного мира недостаточно просто закупить планируемые составляющие. Необходимо точно рассчитать их количество, чтобы аквариум функционировал долго и стабильно, а обитающие в нем рыбки чувствовали себя комфортно. Калькулятор поможет вам в этом! Просто введите указанные данные!</string>
    <string name="service_message">*Данные рассчитаны из количества выбранных рыбок и необходимого минимума объема воды для каждой. Для еще более комфортного проживания рыбок в аквариуме рекомедуется добавить к полученному результату ~10–30 литров!</string>

    <!--    for compatibility-->
    <string name="service_com_title">Совместимость аквариумных рыбок</string>
    <string name="service_com_text">Выберите рыбок для расчета совместимости</string>
    <string name="service_com_btn">Проверить рыбок на совместимость</string>
    <string name="service_com_result_text">Ваш расчет совместимости</string>
    <string name="service_com_result1">Совместимы</string>
    <string name="service_com_result2">Невсегда совместимы</string>
    <string name="service_com_result3">Несовместимы</string>
    <string name="service_com_result_decoding">Расшифровка результатов</string>

    <!--    for forum-->
    <string name="forum_menu_sections">Обсуждения</string>
    <string name="forum_menu_swap">Объявления</string>
    <string name="forum_menu_my">Мои темы</string>

    <!--    for profile settings-->
    <string name="settings_download">Загрузить изображение</string>
    <string name="settings_download_define">Определение рыбки по фото</string>
    <string name="settings_not_result">На ваших фото не обнаружено рыбок</string>
    <string name="settings_yes_result">На ваших фото обнаружены рыбки:</string>
    <string name="settings_personal_data">Личные данные</string>
    <string name="settings_name_field">Имя</string>
    <string name="settings_surname_field">Фамилия</string>
    <string name="settings_city_field">Город</string>
    <string name="settings_phone_field">Номер телефона</string>
    <string name="settings_login_field">Email</string>
    <string name="settings_password_field">Пароль</string>
    <string name="settings_password">изменить пароль</string>
    <string name="settings_security">Данные для входа</string>
    <string name="settings_aquarium_data">Данные об аквариуме и рыбках</string>
    <string name="settings_volume">Объем аквариума (в литрах)</string>
    <string name="settings_my_fish">Мои рыбки</string>
    <string name="settings_add">Выберите рыбок для добавления:</string>
    <string name="settings_save">Сохранить</string>

    <!--    for profile-->
    <string name="settings_myLikeData">Избранное</string>
    <string name="settings_discussionsField">Избранные обсуждения:</string>
    <string name="settings_adsField">Избранные объявления:</string>
    <string name="settings_tipsField">Избранные статьи:</string>

    <!--    for calendar-->
    <string name="service_calendar_title">Календарь для заметок</string>
    <string name="service_calendar_add">Добавить событие</string>
    <string name="service_calendar_add_text">Новая заметка</string>
    <string name="service_calendar_save">Сохранить</string>
    <string name="service_calendar_note">Выберите дату и введите вашу заметку</string>

    <string name="material_calendar_monday">ПН</string>
    <string name="material_calendar_tuesday">ВТ</string>
    <string name="material_calendar_wednesday">СР</string>
    <string name="material_calendar_thursday">ЧТ</string>
    <string name="material_calendar_friday">ПТ</string>
    <string name="material_calendar_saturday">СБ</string>
    <string name="material_calendar_sunday">ВС</string>

    <array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </array>

    <string name="material_calendar_today_button">Сегодня</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Отменить</string>


</resources>