<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".Profile"
    android:id="@+id/root">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/include"
        android:layout_below="@+id/header"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:isScrollContainer="false"
        android:background="@drawable/layout"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/menuColor"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/photo"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="145dp"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:background="#DAD0D0"
                        android:contentDescription="@string/logo"
                        android:src="@drawable/ic_launcher_foreground" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <Button
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/bthAll"
                android:text="@string/settings_download"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="#7b7b7b" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/settings_personal_data"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_name_field"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/calc_item"
                android:textColor="@color/black"
                android:paddingStart="5dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/settings_surname_field"
                android:textColor="@color/gray"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/calc_item"
                android:textColor="@color/black"
                android:paddingStart="5dp"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/settings_city_field"
                android:textColor="@color/gray"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/calc_item"
                android:textColor="@color/black"
                android:paddingStart="5dp"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/settings_phone_field"
                android:textColor="@color/gray"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/calc_item"
                android:textColor="@color/black"
                android:paddingStart="5dp"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="#7b7b7b" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/settings_security"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_login_field"
                android:textColor="@color/gray"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/calc_item"
                android:textColor="@color/black"
                android:paddingStart="5dp"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/settings_password_field"
                android:textColor="@color/gray"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/calc_item"
                android:clickable="true"
                android:text="@string/settings_password"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="18sp"
                android:focusable="true" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/bthAll"
                android:text="@string/settings_save"
                android:textSize="13sp" />
        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/include"
        layout="@layout/menu"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>