<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_thin"
            android:text="@string/app_name_rus"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/gray"
        android:fontFamily="@font/montserrat_thin"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_above="@id/sign"
        android:layout_margin="15dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button_sign_in"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/sign_in_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegistration"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button_registration"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/registration_text" />
    </LinearLayout>

</RelativeLayout>