<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/primingView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.FragmentServiceCalculatorPriming">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/service_calculator_priming"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btnPr"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/service_question"
                android:textAlignment="center"
                android:textColor="@color/bthAll"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@color/bthAll" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/service_rec_prim_length"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/calc_item"
            android:inputType="numberDecimal"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/service_rec_prim_width"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/calc_item"
            android:inputType="numberDecimal"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/service_rec_prim_thickness"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/thickness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/calc_item"
            android:paddingStart="5dp"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/calculationP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/bthAll"
            android:text="@string/service_calculate2"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/calc_item"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/recPrimText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/service_rec_prim"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/priming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>