<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="bottom"
    android:layout_height="45dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:foregroundGravity="bottom"
        android:background="@color/menuColor"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:linksClickable="true"
            android:layout_weight="1"
            android:text="@string/service_text"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/forum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:linksClickable="true"
            android:layout_weight="1"
            android:text="@string/forum_text"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:linksClickable="true"
            android:layout_weight="1"
            android:text="@string/profile_text"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>