<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.FragmentServiceCalculatorVolume">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/service_calculator_volume"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/btnVol"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/service_question"
                    android:textAlignment="center"
                    android:textColor="@color/bthAll"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/bthAll" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/service_volume_fish"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/calc_item"
                android:orientation="horizontal">

                <pl.utkala.searchablespinner.SearchableSpinner
                    android:id="@+id/fishSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:closeText="закрыть"
                    app:dialogTitle="Выберите рыбок для добавления" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fishListItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/fish_item" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/useMyFish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/mainColor"
                android:text="@string/service_use_my_fish"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/calculationV"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:backgroundTint="@color/bthAll"
                android:text="@string/service_calculate"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/resultView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/calc_item"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/service_rec_vol"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:focusable="true"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="true"
                android:paddingBottom="14dp"
                android:text="@string/service_message"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>